Commit : spacing fixes

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -42,6 +42,7 @@ header {
 
 header:nth-child(1) {
     margin-top: 0;
+    padding-top: 7pt;
 }
 
 header h1 {
@@ -76,7 +77,7 @@ header img {
 header video {
     width: 270px;
     position: relative;
-    padding-top: 12pt;
+    padding-top: 7pt;
     padding-bottom: 0pt;
 }
 @media screen and (max-width: 450px) {
@@ -202,10 +203,11 @@ header .header-links a:first-child {
         margin: auto;
         float:initial;
         width: 95%;
+        margin-bottom: 1rem;
     }
     .top-six-bullets > div:nth-child(1) {
         padding: 0;
-        padding-left: 1rem;
+        padding-left: 12pt;
     }
 }
 .seeMore, .seeLess, .seeMoreReview, .seeLessReview, .seeMoreStyle {
